apps/base/store/planetstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planet-store
spec:
  selector:
    matchLabels:
      app: planet-store
  template:
    metadata:
      labels:
        app: planet-store
    spec:
      containers:
        - name: planet-store
          image: img.hephy.pro/planetstore/web:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: planet-store
  namespace: app
spec:
  ports:
    - name: http
      port: 9898
  selector:
    app: planet-store
