apps/base/store/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planetstore
spec:
  rules:
  - host: fix.me
    http:
      paths:
      - backend:
          service:
            name: planet-store
            port:
              number: 9292
        path: /
        pathType: Prefix
